Fix crash with non-integer Qt scaling

We could end up dropping visible blocks during scrolling if only one
pixel line was left and the viewport got rounding one line too small.

Task-number: QTBUG-68699
Change-Id: I1ab646f23d8dd4911b32d02df68c80d6a8d78651
Reviewed-by: Michal Klocek <michal.klocek@qt.io>